# Nova-bot

./: .env  Dockerfile  README.md  bandejao.py  bus.py  busSchedule.py  bus_schedule.py  docker-compose.yml  localidadesBandejao.py  main.py  menus.py  messages.py  nova-bot.py  onibus.py  pyproject.toml  restaurants.py  restaurantsInfo.py  restaurants_info.py  telegramBot.py  telegram_bot.py  texts.py  timeUtils.py  time_utils.py  webScraping.py  websiteRequest.py  whatsappBot.py  whatsapp_bot.py
.github/: deploy.yml
.github/workflows/: deploy.yml
bot/: bus.py  restaurants.py  telegram_bot.py  telegram_msg.py
bot/data/: bus_schedule.py
bot/modules/: bus.py  restaurants.py  time_utils.py
bot/telegram/: telegram_msg.py
data/: bus_schedule.py  restaurantsInfo.py  texts.py
modules/: bus.py  restaurants.py  time_utils.py
restaurants/: restaurantsInfo.py
src/: bus.py  busSchedule.py  restaurants.py  restaurantsInfo.py  timeUtils.py
telegram/: telegram_msg.py
tests/: timeInMinutes.py
